contenido main completado

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
                 </a>
                 <nav class="navegacion">
-                    <a class="navegacion__enlace" href="nosotros.hmtl">Nosotros</a>
+                    <a class="navegacion__enlace" href="blog.html">Noticias</a>
                     <a class="navegacion__enlace" href="cursos.html">Cursos</a>
                     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 </nav>
@@ -29,6 +29,50 @@
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
     </header>
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="./assets/blog1.jpg" alt="imagen blog">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de Granos de Café</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aperiam veritatis nobis officiis
+                        voluptate atque iste ea in, a sapiente hic id eveniet cupiditate soluta quo autem totam dolores
+                        explicabo?</p>
+                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="./assets/blog2.jpg" alt="imagen blog">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Deliciosas recetas para café</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aperiam veritatis nobis officiis
+                        voluptate atque iste ea in, a sapiente hic id eveniet cupiditate soluta quo autem totam dolores
+                        explicabo?</p>
+                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="./assets/blog3.jpg" alt="imagen blog">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aperiam veritatis nobis officiis
+                        voluptate atque iste ea in, a sapiente hic id eveniet cupiditate soluta quo autem totam dolores
+                        explicabo?</p>
+                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
 
     <main>
 
