--- a/index.html
+++ b/index.html
@@ -71,13 +71,35 @@
         </main>
         <aside class="sidebar">
             <h3>Nuestros Cursos y Talleres</h3>
+
+            <ul class="cursos no-padding">
+                <li class="widget-curso">
+                    <h4>Tecnicas de extraccion de cafe</h4>
+                    <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
+                    <p class="widget-curso__label">Cupo: <span class="widget-curso__info">>20</span></p>
+                    <a class="boton boton--secundario" href="entrada.html">Más Información</a>
+                </li>
+                <li class="widget-curso">
+                    <h4>4 Recetas de Café para principiantes</h4>
+                    <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
+                    <p class="widget-curso__label">Cupo: <span class="widget-curso__info">>20</span></p>
+                    <a class="boton boton--secundario" href="entrada.html">Más Información</a>
+                </li>
+                <li class="widget-curso"></li>
+            </ul>
         </aside>
     </div>
 
-    <main>
+    <footer class="footer">
 
-    </main>
-    <footer>
+        <a class="logo" href="index.html">
+            <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
+        </a>
+        <nav class="navegacion">
+            <a class="navegacion__enlace" href="blog.html">Noticias</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+        </nav>
 
     </footer>
 </body>
