paginas nosotros y cursos completas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
                 </a>
                 <nav class="navegacion">
-                    <a class="navegacion__enlace" href="blog.html">Noticias</a>
+                    <a class="navegacion__enlace" href="index.html">Home</a>
+                    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
                     <a class="navegacion__enlace" href="cursos.html">Cursos</a>
                     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 </nav>
@@ -91,16 +92,18 @@
     </div>
 
     <footer class="footer">
-
-        <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
-        </a>
-        <nav class="navegacion">
-            <a class="navegacion__enlace" href="blog.html">Noticias</a>
-            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
-            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-        </nav>
-
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
+                </a>
+                <nav class="navegacion">
+                    <a class="navegacion__enlace" href="blog.html">Noticias</a>
+                    <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+                    <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
     </footer>
 </body>
 
