completada la pagina de contacto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aperiam veritatis nobis officiis
                         voluptate atque iste ea in, a sapiente hic id eveniet cupiditate soluta quo autem totam dolores
                         explicabo?</p>
-                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                    <a class="boton boton--primario" href="entradablog1.html">Leer Entrada</a>
                 </div>
             </article>
             <article class="entrada">
