--- a/contacto.html
+++ b/contacto.html
@@ -36,16 +36,17 @@
         <div class="contacto-bg"></div>
         <form class="formulario">
             <div class="campo">
-                <label for="nombre">Nombre</label>
-                <input type="text" id="nombre" placeholder="Tu Nombre">
+                <label class="campo__label" for="nombre">Nombre</label>
+                <input class="campo__field" type="text" id="nombre" placeholder="Tu Nombre">
             </div>
             <div class="campo">
-                <label for="email">E-Mail</label>
-                <input type="email" id="email" placeholder="Tu E-Mail">
+                <label class="campo__label" for="email">E-Mail</label>
+                <input class="campo__field" type="email" id="email" placeholder="Tu E-Mail">
             </div>
             <div class="campo">
-                <label for="mensaje">Mensaje</label>
-                <textarea name="" id="mensaje" cols="20" rows="5" placeholder="Su Mensaje"></textarea>
+                <label class="campo__label" for="mensaje">Mensaje</label>
+                <textarea class="campo__field campo__field--textarea" name="" id="mensaje"
+                    placeholder="Su Mensaje"></textarea>
             </div>
             <div class="campo">
                 <input type="submit" value="Enviar" class="boton boton--primario">
