--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BlogDeCafe</title>
+    <meta name="description" content="Pagina web de blog de cafe">
+
+    <!-- Prefetch -->
+    <link rel="Prefetch" href="./nosotros.html">
+
+    <!-- Preload -->
+    <link rel="Preload" href="normalize.css" as="style">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="Preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css">
-    <title>Blog de Cafe</title>
 </head>
 
 <body>
@@ -35,7 +43,7 @@
             <h3>Nuestro Blog</h3>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="./assets/blog1.jpg" alt="imagen blog">
+                    <img loading="lazy" src="./assets/blog1.jpg" alt="imagen blog">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Tipos de Granos de Café</h4>
@@ -47,7 +55,7 @@
             </article>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="./assets/blog2.jpg" alt="imagen blog">
+                    <img loading="lazy" src="./assets/blog2.jpg" alt="imagen blog">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Deliciosas recetas para café</h4>
@@ -59,7 +67,7 @@
             </article>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="./assets/blog3.jpg" alt="imagen blog">
+                    <img loading="lazy" src="./assets/blog3.jpg" alt="imagen blog">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Beneficios del Café</h4>
@@ -71,14 +79,14 @@
             </article>
         </main>
         <aside class="sidebar">
-            <h3>Nuestros Cursos y Talleres</h3>
+            <h4>Nuestros Cursos y Talleres</h4>
 
             <ul class="cursos no-padding">
                 <li class="widget-curso">
                     <h4>Tecnicas de extraccion de cafe</h4>
                     <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
                     <p class="widget-curso__label">Cupo: <span class="widget-curso__info">>20</span></p>
-                    <a class="boton boton--secundario" href="entrada.html">Más Información</a>
+                    <a class="boton boton--secundario" href="entrada.html">Más Información sobre nuestros cursos</a>
                 </li>
                 <li class="widget-curso">
                     <h4>4 Recetas de Café para principiantes</h4>
