--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>Nuestro Blog</h3>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img loading="lazy" src="./assets/blog1.jpg" alt="imagen blog">
+                    <img loading="lazy" src="./assets/blog1.webp" alt="imagen blog">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Tipos de Granos de Café</h4>
@@ -55,7 +55,7 @@
             </article>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img loading="lazy" src="./assets/blog2.jpg" alt="imagen blog">
+                    <img loading="lazy" src="./assets/blog2.webp" alt="imagen blog">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Deliciosas recetas para café</h4>
@@ -67,7 +67,7 @@
             </article>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img loading="lazy" src="./assets/blog3.jpg" alt="imagen blog">
+                    <img loading="lazy" src="./assets/blog3.webp" alt="imagen blog">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Beneficios del Café</h4>
